Fix Height UI
The height background color was not covering many
of the books added later

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
 
 .container {
     background-color: #e2e8f0;
+    min-height: min-content;
     height: 100vh;
 }
 
